# SkinPlusPlus

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  README.md  SkinPlusPlus.cpp  SkinPlusPlus.h  SkinPlusPlus.sln  SkinPlusPlus.vcxproj  SkinPlusPlus.vcxproj.filters  SkinPlusPlusPy.cpp  SkinPlusPlusPy.h  pyproject.toml  pyrightconfig.json  resource.h  temp.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black-format.yml  codeql.yml
.projects/: SkinPlusPlus.sublime-project
3DsMax/: DllEntry.cpp  RCa13176  Skin++.aps  Skin++.cpp  Skin++.def  Skin++.h  Skin++.rc  Skin++.sln  Skin++.vcxproj  Skin++.vcxproj.filters  resource.h
PYProjects/: SkinPlusPlus.sublime-project  create_venv.bat  create_venv_37.bat  create_venv_39.bat  pyrightconfig.json
PYProjects/.projects/: SkinPlusPlus.sublime-project
PYProjects/.venvs/37/: pyproject.toml
PYProjects/.venvs/39/: pyproject.toml
PYProjects/skin_plus_plus/: __init__.py  __init__.pyi  _types.py  core.py  io.py  skin_plus_plus.sln  skin_plus_plus_py.pyd  skin_plus_plus_py.pyi
PYProjects/skin_plus_plus_test/: __init__.py  ordering_test.py  skin_plus_plus_test.ms  skin_plus_plus_test.py  wip.py
PYProjects/source/: .1-install_vcpkg.ps1  .2-install_dependencies.ps1  .3-set_environment_variabls.ps1  .sln.ps1  open_skin_plus_plus_sln.bat  post_build.py  skin_plus_plus.sln  vcpkg.json
PYProjects/tests/: skin_plus_plus_test.py
PyModules/skin_plus_plus/: skin_plus_plus.sln
SDKProjects/3DsMax/: DllEntry.cpp  LICENSE  SkinPlusPlus.cpp  SkinPlusPlus.def  setup.py  (+5 more)
src/: pyrightconfig.json
src/.venvs/py310/: pyproject.toml
src/.venvs/py39/: pyproject.toml
test/: test.ms  test.py
(+105 files in other folders)
