[tool.poetry]
name = "37"
version = "0.1.0"
description = "Virtual environment for PY37 pyblind11"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "venv37"}]

[tool.poetry.dependencies]
python = "^3.7"
pybind11 = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
