[tool.poetry]
name = "39"
version = "0.1.0"
description = "Virtual environment for PY39 pyblind11"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "venv39"}]

[tool.poetry.dependencies]
python = "^3.9"
pybind11 = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
